--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -1,3 +1,11 @@
-// body
-//     margin: 0%
-//     header
+body
+    margin: 0%
+    header
+        background-color: $beige
+        h1
+            font-style: italic
+            font-family: Alegreya
+            color: $grisfoncé
+        a
+            color: $gris
+            
