--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -3,7 +3,7 @@ body
     header
         background-color: $beige
         h1
-            font-style: italic
+            font-size: 50px
             font-family: Alegreya
             color: $grisfoncé
         a
