--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -4,8 +4,8 @@ $gris : #6c757d
 // $grisclair: #e7e7e7
 $grisfoncé : #343a40
 $dark : #343a40
-$corail : #ee4527
-$corailclair : #e7644d
+$corail : #e7644d
+$corailclair : #eb7864
 $beige : #f0f0f0
 $marine : #1e293d
 
